cleaned up an old file
